// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`modelProviderSelectors > CUSTOM_MODELS > custom deletion, addition, and renaming of models 1`] = `
[
  {
    "chatModels": [
      {
        "displayName": "llama",
        "functionCall": true,
        "id": "llama",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "claude-2",
        "functionCall": true,
        "id": "claude-2",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "gpt-4-32k",
        "functionCall": true,
        "id": "gpt-4-0125-preview",
        "tokens": 128000,
      },
    ],
    "enabled": true,
    "id": "openai",
  },
]
`;

exports[`modelProviderSelectors > CUSTOM_MODELS > duplicate naming model 1`] = `
[
  {
    "chatModels": [
      {
        "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务",
        "displayName": "GPT-3.5 Turbo",
        "functionCall": true,
        "id": "gpt-3.5-turbo",
        "tokens": 4096,
      },
      {
        "displayName": "GPT-3.5 Turbo (0125)",
        "functionCall": true,
        "id": "gpt-3.5-turbo-0125",
        "tokens": 16385,
      },
      {
        "displayName": "GPT-3.5 Turbo (1106)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-3.5-turbo-1106",
        "tokens": 16385,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-instruct",
        "tokens": 4096,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-16k",
        "tokens": 16385,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-0613",
        "legacy": true,
        "tokens": 4096,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-16k-0613",
        "legacy": true,
        "tokens": 4096,
      },
      {
        "displayName": "GPT-4 Turbo Preview",
        "functionCall": true,
        "id": "gpt-4-turbo-preview",
        "tokens": 128000,
      },
      {
        "displayName": "gpt-4-32k",
        "functionCall": true,
        "id": "gpt-4-0125-preview",
        "tokens": 128000,
      },
      {
        "description": "GPT-4 视觉预览版，支持视觉任务",
        "displayName": "GPT-4 Turbo Vision (Preview)",
        "id": "gpt-4-vision-preview",
        "tokens": 128000,
        "vision": true,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-1106-preview",
        "tokens": 128000,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4",
        "tokens": 8192,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-0613",
        "tokens": 8192,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-32k",
        "tokens": 32768,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-32k-0613",
        "tokens": 32768,
      },
    ],
    "enabled": true,
    "id": "openai",
  },
]
`;

exports[`modelProviderSelectors > CUSTOM_MODELS > only add the model 1`] = `
[
  {
    "chatModels": [
      {
        "description": "GPT 3.5 Turbo，适用于各种文本生成和理解任务",
        "displayName": "GPT-3.5 Turbo",
        "functionCall": true,
        "id": "gpt-3.5-turbo",
        "tokens": 4096,
      },
      {
        "displayName": "GPT-3.5 Turbo (0125)",
        "functionCall": true,
        "id": "gpt-3.5-turbo-0125",
        "tokens": 16385,
      },
      {
        "displayName": "GPT-3.5 Turbo (1106)",
        "functionCall": true,
        "hidden": true,
        "id": "gpt-3.5-turbo-1106",
        "tokens": 16385,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-instruct",
        "tokens": 4096,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-16k",
        "tokens": 16385,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-0613",
        "legacy": true,
        "tokens": 4096,
      },
      {
        "hidden": true,
        "id": "gpt-3.5-turbo-16k-0613",
        "legacy": true,
        "tokens": 4096,
      },
      {
        "displayName": "GPT-4 Turbo Preview",
        "functionCall": true,
        "id": "gpt-4-turbo-preview",
        "tokens": 128000,
      },
      {
        "displayName": "GPT-4 Turbo Preview (0125)",
        "functionCall": true,
        "id": "gpt-4-0125-preview",
        "tokens": 128000,
      },
      {
        "description": "GPT-4 视觉预览版，支持视觉任务",
        "displayName": "GPT-4 Turbo Vision (Preview)",
        "id": "gpt-4-vision-preview",
        "tokens": 128000,
        "vision": true,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-1106-preview",
        "tokens": 128000,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4",
        "tokens": 8192,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-0613",
        "tokens": 8192,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-32k",
        "tokens": 32768,
      },
      {
        "functionCall": true,
        "hidden": true,
        "id": "gpt-4-32k-0613",
        "tokens": 32768,
      },
      {
        "displayName": "model1",
        "functionCall": true,
        "id": "model1",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "model2",
        "functionCall": true,
        "id": "model2",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "model3",
        "functionCall": true,
        "id": "model3",
        "isCustom": true,
        "vision": true,
      },
      {
        "displayName": "model4",
        "functionCall": true,
        "id": "model4",
        "isCustom": true,
        "vision": true,
      },
    ],
    "enabled": true,
    "id": "openai",
  },
]
`;
